Bug 113876 - Parsing outline level only setted in english language on docsh2.cxx:1026
Summary: Parsing outline level only setted in english language on docsh2.cxx:1026
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Ahmed GHANMI
URL:
Whiteboard: target:6.1.0
Keywords:
: 67260 80077 111898 112825 112829 (view as bug list)
Depends on:
Blocks: Writer-Master-Doc
  Show dependency treegraph
 
Reported: 2017-11-16 10:33 UTC by Ahmed GHANMI
Modified: 2018-07-13 14:59 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Contain list.odt and both wrong and right odm files (41.41 KB, application/gzip)
2017-11-16 13:42 UTC, Ahmed GHANMI
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ahmed GHANMI 2017-11-16 10:33:17 UTC
Description:
When creating a document master the checks of listbox values is hardcoded in english so it don't work with other languages like french.

https://pastebin.com/nQ1NAcDV

This is where the file docsh2.cxx : sw/source/uibase/app/docsh2.cxx

Steps to Reproduce:
1.modify language of Lo in french Tools -> Options -> language settings -> user interface (to french (france)) && locale settings (to french (france))
2. open the file uploaded (list.odt)
3. Fichier(File in english) -> Fichier (send in english) -> créer un document master (create master document in engish) -> check in lisbox Template (Styles in english) "Plan : niveau 2 (Outline : level 2 in english)" -> save
4. Save the .odm file (the .odt file will be closed and instead the .odm file will be openend). 

Actual Results:  
Odm file is created and subtitles 1.1 and 1.2 are selected and subtitles 2.1 and 2.2 are selected and .odt file are generated. 
PS: Check right_odm_file.odm

Expected Results:
Odm file is created and title 1 with 1.1 and 1.2 is selected and title 2 with 2.1 and 2.2 are selected and two .odt file are generated. (weird behavior same result as outline 1 : it's an error case in mode debug). 
PS: Check wrong_odm_file.odm


Reproducible: Always


User Profile Reset: No



Additional Info:
Try to reproduce this bug on linux platforms because in windows platforms there is another issue i already fixed and i will commit it.


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 Ahmed GHANMI 2017-11-16 13:42:54 UTC
Created attachment 137809 [details]
Contain list.odt and both wrong and right odm files
Comment 2 Buovjaga 2017-11-16 14:03:49 UTC
Didn't really understand your actual and expected description, but comparing with your right and wrong results I confirm the same badness with Finnish.

Arch Linux 64-bit
Versio: 6.0.0.0.alpha1+
Käännöksen ID: 121303615054568c204def97872343d2014af4a0
CPU-säikeet: 8; Käyttöjärjestelmä: Linux 4.13; Piirtokomponentti: oletus; VCL: kde4; 
Maa-asetus: fi-FI (fi_FI.UTF-8); Calc: group
Built on November 16th 2017
Comment 3 Commit Notification 2017-12-04 21:22:05 UTC
Ahmed GHANMI committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b45c95556d19cf51aab3658e533a2aeaa023d10

tdf#113876: fix hardcoded compare strings

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2017-12-08 22:05:25 UTC
*** Bug 80077 has been marked as a duplicate of this bug. ***
Comment 5 Gabor Kelemen (Collabora) 2017-12-08 22:06:07 UTC
*** Bug 112825 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2017-12-13 09:28:33 UTC
*** Bug 111898 has been marked as a duplicate of this bug. ***
Comment 7 Xisco Faulí 2017-12-13 09:28:51 UTC
*** Bug 112829 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2018-07-13 14:59:47 UTC
*** Bug 67260 has been marked as a duplicate of this bug. ***