tdf#113876: fix hardcoded compare strings

Checks of listbox values are hardcoded in english so we replaced
the hardcoded compare with "SwResId" function which give us
the string in correspondant language and in addition with
"startsWith" function we check if the string is in the listbox's
item of user choice.

Change-Id: I3cc23b43750c82672454aa6812dfad1437ede7fc
Reviewed-on: https://gerrit.libreoffice.org/45812
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>